--- a/Views/home.ejs
+++ b/Views/home.ejs
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Yelp Camp Home</h1>
-    <a href="/campgrounds">To all campgrounds</a>
-</body>
-</html>
+<% layout('layouts/boilerplate') %>
+<h1>Yelp Camp Home</h1>
+<div><a href="/register">Register</a></div>
+<div></div><a href="/login">Login</a></div>
+<div></div><a href="/campgrounds">To all campgrounds</a></div>
